--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <div class="card flex justify-content-center align-items-center" style="height: 100vh; flex-direction: column; gap: 1rem;">
-  <h1>FitApp</h1>
+  <h1>FitApp v0.0.1</h1>
   <p-button label="Toggle Dark Mode" (click)="toggleDarkMode()" />
   <p>Check the theme change!</p>
 </div>
