reload dialog customized

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,7 @@
+<p-confirmDialog />
+
 <div class="card flex justify-content-center align-items-center" style="height: 100vh; flex-direction: column; gap: 1rem;">
-  <h1>FitApp v1.0.4</h1>
+  <h1>FitApp v1.0.0</h1>
   <p-button label="Toggle Dark Mode" (click)="toggleDarkMode()" />
   <p>Check the theme change!</p>
 </div>
