--- a/src/app/private/list/list.component.html
+++ b/src/app/private/list/list.component.html
@@ -1,5 +1,5 @@
 <div class="mx-2 my-4">
-  <p class="text-3xl font-bold my-3">Próximas clases</p>
+  <p class="text-2xl font-bold my-3">Tus próximas clases</p>
 </div>
 
 <p-accordion value="0">
@@ -21,7 +21,7 @@
           shape="circle"
           [pt]="{root: {class: 'bg-green-100'}}"
         />
-        <span class="text-lg font-bold whitespace-nowrap">Martes 27 Enero -
+        <span class="text-lg font-bold whitespace-nowrap">Martes 20 Enero -
           18:00</span>
         <p-badge
           value="3 + 3"
@@ -137,7 +137,7 @@
           shape="circle"
           [pt]="{root: {class: 'bg-red-100'}}"
         />
-        <span class="text-lg font-bold whitespace-nowrap">Martes 27 Enero -
+        <span class="text-lg font-bold whitespace-nowrap">Martes 3 Febrero -
           20:30</span>
         <p-badge
           value="2 + 3"
