--- a/src/app/private/layout/layout.component.html
+++ b/src/app/private/layout/layout.component.html
@@ -1,6 +1,12 @@
 <p-tabs [value]="router.url">
   <p-tablist [pt]="{ tabList: { class: 'justify-content-around' } }">
     <p-tab
+      [pt]="{ root: { class: 'pl-2 pr-0' } }"
+      value="name"
+    >
+      <p class="m-0">FitCenter</p>
+    </p-tab>
+    <p-tab
       value="/calendar"
       [routerLink]="['/calendar']"
     >
