shared feature details

--- a/src/app/private/layout/layout.component.html
+++ b/src/app/private/layout/layout.component.html
@@ -1,8 +1,9 @@
 <p-tabs [value]="router.url">
   <p-tablist [pt]="{ tabList: { class: 'justify-content-around' } }">
     <p-tab
+      value="/home"
+      disabled="true"
       [pt]="{ root: { class: 'pl-2 pr-0' } }"
-      value="name"
     >
       <p class="m-0">FitCenter</p>
     </p-tab>
