--- a/src/app/private/user/user.component.html
+++ b/src/app/private/user/user.component.html
@@ -1,5 +1,9 @@
 <div class="flex justify-center align-items-center flex-column gap-6 mt-6">
-  <h1>FitApp v1.0.2</h1>
+
+  <div class="flex flex-column align-items-center gap-2">
+    <p class="text-3xl font-bold m-0">FitCenter App</p>
+    <p class="text-lg m-0">v1.0.1 Alpha</p>
+  </div>
 
   <div class="flex align-items-center gap-2">
     <span>Dark Mode</span>
