--- a/src/app/private/admin-agenda/admin-agenda.html
+++ b/src/app/private/admin-agenda/admin-agenda.html
@@ -141,14 +141,14 @@
     <ng-template pTemplate="footer">
       <div class="flex justify-content-end gap-2 pt-2">
         <p-button
-          label="Cancelar"
+          label="Cerrar"
           severity="secondary"
-          [text]="true"
+          variant="outlined"
           size="small"
           (click)="showMembersDialog.set(false)"
         />
         <p-button
-          label="Guardar Alumnos"
+          label="Guardar"
           severity="info"
           size="small"
           (click)="saveMembers()"
@@ -235,7 +235,7 @@
             appendTo="body"
           />
         </div>
-      
+
         <!-- End Hour -->
         <div class="flex flex-column gap-1 flex-1">
           <label
@@ -253,7 +253,7 @@
         </div>
       </div>
       </div>
-      
+
       <ng-template pTemplate="footer">
         <div class="flex justify-content-end gap-2 pt-2">
           <p-button
@@ -274,4 +274,3 @@
     </ng-template>
     </p-dialog>
     </div>
-    
